# PyQt-Fluent-Widgets-MergeVersion

./: .gitignore  README.md  pyproject.toml
qfgenerate/: generate.py  template.py  version.py
scripts/: auto.sh
